--- a/.github/workflows/development-release.yml
+++ b/.github/workflows/development-release.yml
@@ -1,11 +1,10 @@
 name: "Create Development Release"
 on:
   push:
-    branches: ["main"]
+    branches: ["development"]
 
 jobs:
   build:
-    #if: "contains('dev-release', github.event.head_commit.message) || contains('dev release', github.event.head_commit.message)"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
