--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   build:
-    if: "contains('Release: ', github.event.head_commit.message)"
+    if: "contains('release', github.event.head_commit.message)"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
