--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ env:
 
 jobs:
   build:
-    if: "contains('release', github.event.head_commit.message)"
+    #if: "contains('release', github.event.head_commit.message)"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
