--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ env:
 
 jobs:
   build:
-    #if: "contains('release', github.event.head_commit.message)"
+    if: "startsWith(github.event.head_commit.message, 'Release ')"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
