--- a/.github/workflows/dev-release.yml
+++ b/.github/workflows/dev-release.yml
@@ -25,6 +25,7 @@ jobs:
           php composer-setup.php
           php -r "unlink('composer-setup.php');"
           composer install --no-dev
+          ls vendor
 
       - name: "Get data"
         id: metadata
