test push for auto updater

--- a/plugin.yml
+++ b/plugin.yml
@@ -2,7 +2,7 @@ name: "Cosmetic-X"
 authors:
   - "BauboLP"
   - "xxAROX"
-website: "https://cosmetic-x.de"
+website: "https://cosmetic-x.de/"
 version: "1.0+dev"
 description: "Cosmetic-X client for PocketMine-MP"
 
