--- a/resources/config.yml
+++ b/resources/config.yml
@@ -1,5 +1,5 @@
 # Don't touch this config
 protocol: "https"
-host: "localhost"
-port: 20085
+host: "cosmetic-x.de"
 refresh-interval: 1800
+auto-update: true
