--- a/resources/config.yml
+++ b/resources/config.yml
@@ -6,4 +6,8 @@ refresh-interval: 1800
 # Config that you can change without critical issues, lol
 show_locked_cosmetics: true
 enable_waterdog_support: false # if your server network uses WaterdogPE, set this to 'true'.
-rescale skins: true # if this is enabled player-skins will resize to 64x64, otherwise the player cannot use our cosmetics.
+
+# Rich Presence config
+enable-rich-presence: false
+network: "localhost™"
+server: "PocketMine-MP Server"
