--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,10 @@
     "autoload": {
         "psr-4": {
             "": "src/"
-        }
+        },
+        "files": [
+            "src/cosmeticx/functions.php"
+        ]
     },
     "authors": [
         {
