--- a/plugin.yml
+++ b/plugin.yml
@@ -2,9 +2,10 @@ name: "Cosmetic-X"
 authors:
   - "BauboLP"
   - "xxAROX"
-website: "https://github.com/xxAROX/"
-version: "1.0"
-description: "Cosmetic-X client for PocketMine-4"
+website: "https://cosmetic-x.de"
+version: "1.0+dev"
+description: "Cosmetic-X client for PocketMine-MP"
 
-api: [ "4.0.0" ]
+api:
+  - "4.0.0"
 main: cosmeticx\CosmeticX
