--- a/.github/workflows/dev-release.yml
+++ b/.github/workflows/dev-release.yml
@@ -21,6 +21,13 @@ jobs:
       - name: Install dependencies
         uses: php-actions/composer@v6
         with:
+          command: update
+          dev: no
+          php_version: 8.0
+
+      - name: Install dependencies
+        uses: php-actions/composer@v6
+        with:
           dev: no
           php_version: 8.0
 
