--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
           command: update --no-dev
           dev: no
           php_version: 8.0
-          php_extenstions: yaml gd
+          php_extensions: yaml gd
 
       - name: composer install --no-dev
         uses: php-actions/composer@v6
@@ -32,6 +32,7 @@ jobs:
           command: install --no-dev
           dev: no
           php_version: 8.0
+          php_extensions: yaml gd
 
       - name: "Get data"
         id: metadata
