--- a/.github/workflows/dev-release.yml
+++ b/.github/workflows/dev-release.yml
@@ -17,23 +17,13 @@ jobs:
         uses: shivammathur/setup-php@2.12.0
         with:
           php-version: 8.0
-          extensions: yaml gd
+          extensions: yaml gd2 gd
 
-      - name: composer update --no-dev
-        uses: php-actions/composer@v6
-        with:
-          command: update --no-dev
-          dev: no
-          ssh_key: ${{ secrets.SSH_KEY }}
-          ssh_key_pub: ${{ secrets.SSH_KEY_PUB }}
+      - name: Install Composer
+        run: |
+          composer update --no-interaction --no-dev
+          composer install --no-suggest --no-interaction --no-dev
 
-      - name: composer install --no-dev
-        uses: php-actions/composer@v6
-        with:
-          command: install --no-dev
-          dev: no
-          ssh_key: ${{ secrets.SSH_KEY }}
-          ssh_key_pub: ${{ secrets.SSH_KEY_PUB }}
 
       - name: "Get data"
         id: metadata
