--- a/.github/workflows/dev-release.yml
+++ b/.github/workflows/dev-release.yml
@@ -18,8 +18,10 @@ jobs:
         with:
           php-version: 8.0
           extensions: yaml gd2 gd
+          env:
+            COMPOSER_TOKEN: ${{ secrets.TOKEN }}
 
-      - name: Install Composer
+      - name: Composer
         run: |
           composer update --no-interaction --no-dev --ignore-platform-reqs
           composer install --no-suggest --no-interaction --no-dev --ignore-platform-reqs
