--- a/plugin.yml
+++ b/plugin.yml
@@ -1,11 +1,7 @@
 name: "Cosmetic-X"
-authors:
-  - "BauboLP"
-  - "xxAROX"
+authors: ["xxAROX", "BauboLP"]
 website: "https://cosmetic-x.de"
-version: "1.0+dev"
+version: "1.0.0"
 description: "Cosmetic-X client for PocketMine-MP"
-
-api:
-  - "4.0.0"
+api: [ "4.0.0" ]
 main: cosmeticx\CosmeticX
