--- a/resources/config.yml
+++ b/resources/config.yml
@@ -10,4 +10,4 @@ enable_waterdog_support: false # if your server network uses WaterdogPE, set thi
 # Rich Presence config
 enable-rich-presence: false
 network: "localhost"
-server: "PocketMine-MP Serverr"
+server: "PocketMine-MP Server"
