--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     "require": {
         "xxarox/forms": "^1.1.3",
         "xxarox/utils": "dev-main",
-        "its-vezdehod/vpacks": "dev-master",
+        "its-vezdehod/vpacks": "dev-development",
         "php": "^8.0",
         "ext-curl": "*",
         "ext-yaml": "*",
